--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <ImageView
+    <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/imageView"
         android:layout_width="379dp"
         android:layout_height="wrap_content"
@@ -23,7 +23,6 @@
         android:layout_width="0dp"
         android:layout_height="48dp"
         android:layout_marginTop="60dp"
-        android:onClick="simpleMetodOnClick"
         android:text="@string/app_button_simple_pay"
         app:layout_constraintEnd_toEndOf="@+id/holdingPayButton"
         app:layout_constraintHorizontal_bias="0.0"
@@ -35,7 +34,6 @@
         android:layout_width="0dp"
         android:layout_height="48dp"
         android:layout_marginTop="40dp"
-        android:onClick="holdingMetodOnClick"
         android:text="@string/app_button_holding_pay"
         app:layout_constraintEnd_toEndOf="@+id/recurrentPayButton"
         app:layout_constraintHorizontal_bias="0.492"
@@ -50,21 +48,20 @@
         android:layout_marginStart="100dp"
         android:layout_marginTop="40dp"
         android:layout_marginEnd="100dp"
-        android:onClick="recurrentMetodOnClick"
         android:text="@string/app_button_recurrent_pay"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.492"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/holdingPayButton" />
 
-    <EditText
+    <androidx.appcompat.widget.AppCompatEditText
         android:id="@+id/orderNumber"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="60dp"
         android:ems="10"
-        android:hint="Номер заказа"
-        android:inputType="text"
+        android:hint="@string/app_order_hint"
+        android:inputType="number"
         app:layout_constraintEnd_toEndOf="@+id/simplePayButton"
         app:layout_constraintStart_toStartOf="@+id/simplePayButton"
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
